--- a/LLP/pom.xml
+++ b/LLP/pom.xml
@@ -31,6 +31,13 @@
       <version>2.17.0</version>
     </dependency>
 
+    <!-- JCommander -->
+    <dependency>
+      <groupId>org.jcommander</groupId>
+      <artifactId>jcommander</artifactId>
+      <version>2.0</version>
+    </dependency>
+
     <!-- JUnit -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
